Move WordBreakCompoundRewriter and related classes to querqy-core (#1120)
Introduces a TermCorpus abstraction to decouple the word-break/compound
rewriting logic from Lucene. All word-break classes (WordBreaker,
Compounder, MorphologicalWordBreaker, MorphologicalCompounder,
WordBreakCompoundRewriter, WordBreakCompoundRewriterFactory, morphology
helpers, and German-specific implementations) are moved from
querqy.lucene.contrib.rewrite.wordbreak to querqy.rewrite.contrib.wordbreak
in querqy-core. LuceneTermCorpus (the Lucene-backed TermCorpus
implementation) is moved to querqy.lucene. SpellCheckerWordBreaker,
SpellCheckerCompounder, and ClassicWordBreakCompoundRewriterFactory are
removed. Tests are updated accordingly.

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>